# opendoc

./: CHANGELOG.md  Cargo.toml  README.md
.tasks/: T-0082.md  T-0083.md  T-0084.md  T-0085.md  T-0086.md  index.md
crates/cli/: Cargo.toml
crates/cli/src/: cmd.rs  io.rs  main.rs
crates/odoc/: Cargo.toml
crates/odoc/src/: io.rs  lib.rs
crates/odoc/src/convert/: markdown.rs  mod.rs
crates/odoc/src/query/: helpers.rs  mod.rs
crates/odoc/src/render/: markdown.rs  mod.rs
crates/odoc/src/types/: annotation.rs  block.rs  inline.rs  mod.rs  provenance.rs
crates/odoc/tests/: convert.rs  io.rs  query.rs  render.rs  roundtrip.rs
crates/odoc/tests/corpus/json/: full.json  simple.json
crates/odoc/tests/corpus/markdown/: annotated.expected  full.expected  simple.expected
crates/odoc/tests/fixtures/: annotated.json
crates/osheet/: Cargo.toml
crates/osheet/src/: lib.rs
docs/: odoc.md  osheet.md
